Update static demo: UI polish, reports spacing, timesheets data, new project wizard

--- a/admin.html
+++ b/admin.html
@@ -29,7 +29,7 @@
         <span class="chip">Role: Admin</span>
       </div>
       <div class="flex items-center gap-2">
-        <a class="btn" href="project-details.html">New Project</a>
+        <a class="btn" href="new-project.html">New Project</a>
         <a class="btn" href="assets/csv/projects.csv" download>Export CSV</a>
         <a class="btn ghost" href="index.html#tour">Help</a>
       </div>
