--- a/projects.html
+++ b/projects.html
@@ -28,6 +28,7 @@
         <h1 style="margin:0; font-size: 22px;">Projects</h1>
       </div>
       <div class="flex items-center gap-2">
+        <a class="btn" href="new-project.html">New Project</a>
         <a class="btn" href="assets/csv/projects.csv" download>Export CSV</a>
       </div>
     </header>
