--- a/timesheets.html
+++ b/timesheets.html
@@ -62,15 +62,25 @@
                 <td>Content Writing</td>
                 <td>Acme Website Revamp</td>
                 <td>6</td>
-                <td>0</td>
+                <td>2</td>
                 <td>4</td>
                 <td>0</td>
                 <td>0</td>
-                <td>10</td>
+                <td>12</td>
+              </tr>
+              <tr>
+                <td>Content Updates</td>
+                <td>IKF Marketing Site Refresh</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td>3</td>
+                <td>2</td>
+                <td>5</td>
               </tr>
             </tbody>
           </table>
-          <div class="mt-4 text-right"><strong>Week Total: 10 hrs</strong></div>
+          <div class="mt-4 text-right"><strong>Week Total: 17 hrs</strong></div>
         </div>
       </section>
 
@@ -101,8 +111,32 @@
                 <td>Riya Kapoor</td>
                 <td>Acme Website Revamp</td>
                 <td>Content Writing</td>
+                <td>2024-08-13</td>
+                <td>2</td>
+                <td><span class="badge ongoing">Logged</span></td>
+              </tr>
+              <tr>
+                <td>Riya Kapoor</td>
+                <td>Acme Website Revamp</td>
+                <td>Content Writing</td>
                 <td>2024-08-14</td>
                 <td>4</td>
+                <td><span class="badge ongoing">Logged</span></td>
+              </tr>
+              <tr>
+                <td>Riya Kapoor</td>
+                <td>IKF Marketing Site Refresh</td>
+                <td>Content Updates</td>
+                <td>2024-08-15</td>
+                <td>3</td>
+                <td><span class="badge ongoing">Logged</span></td>
+              </tr>
+              <tr>
+                <td>Riya Kapoor</td>
+                <td>IKF Marketing Site Refresh</td>
+                <td>Content Updates</td>
+                <td>2024-08-16</td>
+                <td>2</td>
                 <td><span class="badge ongoing">Logged</span></td>
               </tr>
               <tr>
@@ -120,6 +154,14 @@
                 <td>2024-08-15</td>
                 <td>3</td>
                 <td><span class="badge onhold">Pending</span></td>
+              </tr>
+              <tr>
+                <td>Karan Shah</td>
+                <td>IKF Marketing Site Refresh</td>
+                <td>Design</td>
+                <td>2024-08-16</td>
+                <td>2</td>
+                <td><span class="badge ongoing">Logged</span></td>
               </tr>
               <tr>
                 <td>Neha Joshi</td>
@@ -145,6 +187,62 @@
                 <td>7</td>
                 <td><span class="badge ongoing">Logged</span></td>
               </tr>
+              <tr>
+                <td>Neha Joshi</td>
+                <td>BlueWave Foods Microsite</td>
+                <td>Development</td>
+                <td>2024-08-15</td>
+                <td>4</td>
+                <td><span class="badge ongoing">Logged</span></td>
+              </tr>
+              <tr>
+                <td>Neha Joshi</td>
+                <td>BlueWave Foods Microsite</td>
+                <td>Development</td>
+                <td>2024-08-16</td>
+                <td>3</td>
+                <td><span class="badge ongoing">Logged</span></td>
+              </tr>
+              <tr>
+                <td>Amit Kulkarni</td>
+                <td>Vista Realty Corporate Site</td>
+                <td>QA & Testing</td>
+                <td>2024-08-12</td>
+                <td>3</td>
+                <td><span class="badge completed">Approved</span></td>
+              </tr>
+              <tr>
+                <td>Amit Kulkarni</td>
+                <td>Vista Realty Corporate Site</td>
+                <td>QA & Testing</td>
+                <td>2024-08-13</td>
+                <td>4</td>
+                <td><span class="badge completed">Approved</span></td>
+              </tr>
+              <tr>
+                <td>Amit Kulkarni</td>
+                <td>Phoenix Logistics Portal</td>
+                <td>QA & Testing</td>
+                <td>2024-08-14</td>
+                <td>5</td>
+                <td><span class="badge ongoing">Logged</span></td>
+              </tr>
+              <tr>
+                <td>Amit Kulkarni</td>
+                <td>Acme Website Revamp</td>
+                <td>QA & Testing</td>
+                <td>2024-08-15</td>
+                <td>2</td>
+                <td><span class="badge ongoing">Logged</span></td>
+              </tr>
+              <tr>
+                <td>Sana Iqbal</td>
+                <td>Acme Website Revamp</td>
+                <td>Tech Support</td>
+                <td>2024-08-16</td>
+                <td>2</td>
+                <td><span class="badge ongoing">Logged</span></td>
+              </tr>
             </tbody>
           </table>
         </div>
@@ -155,8 +253,9 @@
           <h3 style="margin-top:0">Insights</h3>
           <p class="text-muted">Personal utilization and top projects for the selected range.</p>
           <ul>
-            <li>Utilization: 62%</li>
-            <li>Top Project: Acme Website Revamp</li>
+            <li>Riya Kapoor — 17 hrs</li>
+            <li>Neha Joshi — 28 hrs</li>
+            <li>Karan Shah — 10 hrs</li>
           </ul>
         </aside>
       </section>
