--- a/clients.html
+++ b/clients.html
@@ -18,7 +18,7 @@
       <a href="timesheets.html"><span>Timesheets</span></a>
       <a href="reports.html"><span>Reports</span></a>
       <a href="resources.html"><span>Resources</span></a>
-      <a class="is-active" href="clients.html"><span>Clients</span></a>
+      <a class="is-active" aria-current="page" href="clients.html"><span>Clients</span></a>
       <a href="settings.html"><span>Settings</span></a>
     </nav>
   </aside>
