--- a/manager.html
+++ b/manager.html
@@ -14,7 +14,7 @@
     <div class="logo"><img src="assets/img/ikf-logo.svg" alt="IKF" width="36"><strong>IKF</strong></div>
     <nav>
       <a href="admin.html"><span>Dashboard</span></a>
-      <a class="is-active" href="manager.html"><span>PM / Dept</span></a>
+      <a class="is-active" aria-current="page" href="manager.html"><span>PM / Dept</span></a>
       <a href="projects.html"><span>Projects</span></a>
       <a href="timesheets.html"><span>Timesheets</span></a>
       <a href="reports.html"><span>Reports</span></a>
