--- a/projects.html
+++ b/projects.html
@@ -14,7 +14,7 @@
     <div class="logo"><img src="assets/img/ikf-logo.svg" alt="IKF" width="36"><strong>IKF</strong></div>
     <nav>
       <a href="admin.html"><span>Dashboard</span></a>
-      <a class="is-active" href="projects.html"><span>Projects</span></a>
+      <a class="is-active" aria-current="page" href="projects.html"><span>Projects</span></a>
       <a href="timesheets.html"><span>Timesheets</span></a>
       <a href="reports.html"><span>Reports</span></a>
       <a href="resources.html"><span>Resources</span></a>
@@ -51,7 +51,7 @@
         <span id="filter-ongoing"></span>
         <span id="filter-onhold"></span>
         <span id="filter-completed"></span>
-        <table class="table projects-table" aria-describedby="projects-caption">
+        <table class="table compact projects-table" aria-describedby="projects-caption">
           <caption id="projects-caption" class="sr-only">Projects list</caption>
           <thead>
             <tr>
