--- a/resources.html
+++ b/resources.html
@@ -17,7 +17,7 @@
       <a href="projects.html"><span>Projects</span></a>
       <a href="timesheets.html"><span>Timesheets</span></a>
       <a href="reports.html"><span>Reports</span></a>
-      <a class="is-active" href="resources.html"><span>Resources</span></a>
+      <a class="is-active" aria-current="page" href="resources.html"><span>Resources</span></a>
       <a href="clients.html"><span>Clients</span></a>
       <a href="settings.html"><span>Settings</span></a>
     </nav>
