--- a/client.html
+++ b/client.html
@@ -26,7 +26,7 @@
       <a href="timesheets.html"><span>Timesheets</span></a>
       <a href="reports.html"><span>Reports</span></a>
       <a href="resources.html"><span>Resources</span></a>
-      <a class="is-active" href="client.html"><span>Client</span></a>
+      <a class="is-active" aria-current="page" href="client.html"><span>Client</span></a>
       <a href="settings.html"><span>Settings</span></a>
     </nav>
   </aside>
