--- a/reports.html
+++ b/reports.html
@@ -16,7 +16,7 @@
       <a href="admin.html"><span>Dashboard</span></a>
       <a href="projects.html"><span>Projects</span></a>
       <a href="timesheets.html"><span>Timesheets</span></a>
-      <a class="is-active" href="reports.html"><span>Reports</span></a>
+      <a class="is-active" aria-current="page" href="reports.html"><span>Reports</span></a>
       <a href="resources.html"><span>Resources</span></a>
       <a href="clients.html"><span>Clients</span></a>
       <a href="settings.html"><span>Settings</span></a>
