--- a/timesheets.html
+++ b/timesheets.html
@@ -15,7 +15,7 @@
     <nav>
       <a href="admin.html"><span>Dashboard</span></a>
       <a href="projects.html"><span>Projects</span></a>
-      <a class="is-active" href="timesheets.html"><span>Timesheets</span></a>
+      <a class="is-active" aria-current="page" href="timesheets.html"><span>Timesheets</span></a>
       <a href="reports.html"><span>Reports</span></a>
       <a href="resources.html"><span>Resources</span></a>
       <a href="clients.html"><span>Clients</span></a>
