--- a/projects.html
+++ b/projects.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 <a class="skip-link" href="#main">Skip to content</a>
+<span id="comfy"></span><span id="dense"></span>
 <div class="app">
   <aside class="sidebar" aria-label="Primary">
     <div class="logo"><img src="assets/img/ikf-logo.svg" alt="IKF" width="36"><strong>IKF</strong></div>
@@ -46,6 +47,7 @@
           <div class="flex gap-2">
             <span class="chip">Sort: Progress</span>
             <span class="chip">Dept: Website</span>
+            <span class="chip" data-tooltip="Toggle density via bottom bar">View</span>
           </div>
         </div>
         <span id="filter-ongoing"></span>
